data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_543.wast
;; 4. **Test Description**: Design a loop that contains a `br_table` instruction which always chooses an index that results in a backward jump, ensuring the loop executes indefinitely.    **Constraint Checked**: Correct processing of `br_table` values and indexing.    **Relation to Infinite Loops**: Confirms the correct interpretation of indices within `br_table` and checks for improper index handling that could lead to infinite loops.

(assert_invalid
  (module
    (func (loop
      (block
        (br_table 0 0)
      )
    ))
  )
  "type mismatch"
)